direct for NANP

--- a/src/app/apple-form/apple-form.component.html
+++ b/src/app/apple-form/apple-form.component.html
@@ -12,5 +12,5 @@
 		LE 10
 	</div>
 	<button type="submit"></button>
-	TODO: remove this: {{pearName}}
+	TODO: remove this: {{pearName}} returns {{pearModel.valid}}
 </form>
